--- a/apie.html
+++ b/apie.html
@@ -61,6 +61,13 @@
     <!-- Page Content -->
  <div class="container">
         <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <hr>
+                            <p class="lead">Sodybos <b>teritorija</b> - ~4 ha.</br> 0,5 ha <b>tvenkinys</b> (didelis lieptas, valtis, vandens dviratis)</br>
+                        <b>Sporto aikštynas</b> (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė.</br> Keli skirtingi įvažiavimai ir atskiros <b>automobilių stovėjimo</b> aikštelės.
+                          Sodyboje yra 5 nuomojami pastatai: „<b>Dvaras</b>“, „<b>Svirnas</b>“, „<b>Klėtis</b>“, „<b>Seklyčia</b>“, „<b>Pirkia</b>“, skirti Jūsų šventei ir poilsiui.</p>
+                          <hr>
+                    </div>
             <div class="col-md-6">
                 <img src="img/pazymejimas.jpg" alt="Logotipas" class="img-responsive center-block" />
             </div>
