--- a/dvaras.html
+++ b/dvaras.html
@@ -66,17 +66,9 @@
                     <hr>
     </div>
                 <div class="col-md-5">
-                <p><b>Dvaras</b>:</p>
-                <ul>
-                    <li>Pastato plotas daugiau nei 800 kv. m.
-                    </li>
-                    <li>Pobūvių salė daugiau nei 200 kv. m</li>
-                    <li>Maksimalus svečių skaičius iki 150 žmonių</li>
-                    <li>57 miegamieji kambariai svečiams</li>
-                    <li>Biliardas, stalo tenisas ir stalo fubolas</li>
-                </ul>
-                <p>Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais. Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
-            </div>
+                                <h3>Dvaras</h3>
+                                <p class="text-justify">Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių).</p><p class="text-justify"> Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais.</p> <p class="text-justify">Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
+                            </div>
             
             <div class="col-md-7">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
