--- a/index.html
+++ b/index.html
@@ -65,12 +65,15 @@
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
+            <a href="#" class="btn btn-primary mygtuks">Skambinti</a><br>
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
-
+<!--<div class="col-md-12 hover-slide text-center">
+            <a href="#page-intro" class="btn btn-primary mygtuks">Skambinti</a>
+    </div>-->
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
 
@@ -144,7 +147,14 @@
                             </div>
                             <div class="col-md-5">
                                 <h3>Dvaras</h3>
-                                <p class="text-justify">Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių).</p><p class="text-justify"> Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais.</p> <p class="text-justify">Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
+                                <p class="text-justify"><ul>
+                    <li>Pastato plotas daugiau nei 800 kv. m.
+                    </li>
+                    <li>Pobūvių salė daugiau nei 200 kv. m</li>
+                    <li>Maksimalus svečių skaičius iki 150 žmonių</li>
+                    <li>57 miegamieji kambariai svečiams</li>
+                    <li>Biliardas, stalo tenisas ir stalo fubolas</li>
+                </ul></p>
                                 <a class="btn btn-primary" href="dvaras.html">Plačiau</a>
                                 <a class="btn btn-primary" href="https://goo.gl/rnLq74" target="_blank">360° turas</a>
                                 <a class="btn btn-primary" href="#">Užsisakyti</a>
@@ -217,14 +227,12 @@
                             </div>
                     </div>
                 </div>
-                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                        <hr>
-                            <p class="lead">Sodybos <b>teritorija</b> - ~4 ha.</br> 0,5 ha <b>tvenkinys</b> (didelis lieptas, valtis, vandens dviratis)</br>
-                        <b>Sporto aikštynas</b> (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė.</br> Keli skirtingi įvažiavimai ir atskiros <b>automobilių stovėjimo</b> aikštelės.
-                          Sodyboje yra 5 nuomojami pastatai: „<b>Dvaras</b>“, „<b>Svirnas</b>“, „<b>Klėtis</b>“, „<b>Seklyčia</b>“, „<b>Pirkia</b>“, skirti Jūsų šventei ir poilsiui.</p>
-                          <hr>
-                    </div>
+               
         <!-- Footer -->
+        <div class="col-lg-12">
+                    <h2 class="text-center">Paslaugos</h2>
+                    <hr>
+                </div>
         <div class="col-md-6 text-center">
                 <div class="thumbnail">
                     <img class="img-responsive" src="img/maitinimas.jpg" alt="">
@@ -269,8 +277,7 @@ Pateikiame kelis mūsų sudarytus meniu jūsų įvertinimui. Meniu yra pavyzdini
                     </div>
                 </div>
             </div>
-        </div>
-                          <hr>
+                        
                     <footer>
                         <div id="disqus_thread" class="col-lg-12"></div>
 <script>
